# palsar

./: .gitignore  CHANGELOG.md  LICENSE  README-template.md  README.md  docker_env  environment.yml  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
docs/: installation_and_basic_usage.ipynb
scripts/: lint
src/azure/: README.md  host.json  requirements.txt
src/azure-function/: requirements.txt
src/azure-function/palsar-converter/: __init__.py
src/azure/palsar/: __init__.py  function.json
src/stactools/palsar/: __init__.py  cog.py  commands.py  constants.py  errors.py  stac.py  utils.py
tests/: __init__.py  test_cog.py  test_commands.py  test_module.py  test_stac.py
