[metadata]
name = stactools-stactools-palsar
version = attr: stactools.stactools_palsar.__version__
description = PALSAR/PALSAR-2 Annual Mosaics and Forest/Non-Forest Mosacis
long_description = file: README.md
long_description_content_type = text/markdown
author = Alex Mandel
author_email = alex@developmentseed.org
url = https://github.com/stactools-packages/stactools-palsar
project_urls =
    Documentation = https://stactools-stactools-palsar.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/stactools-palsar/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1

[options.packages.find]
where = src
